fix: hide overflowing elements and add style to prime ng table

--- a/src/app/core/layouts/dashboard-layout/dashboard-layout.component.scss
+++ b/src/app/core/layouts/dashboard-layout/dashboard-layout.component.scss
@@ -114,5 +114,6 @@ main {
     grid-column: 2 / -1;
     background-color: var.$color-blue-gray-50;
     padding: 1rem;
+    overflow-y: hidden;
 }
 
